results page changes

--- a/results.html
+++ b/results.html
@@ -66,6 +66,7 @@
 			</div>
 		</section>
 
+
 		<section id="sankey-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
@@ -89,8 +90,54 @@
 		</section>
 
 		
-
+		<section id="two" class="wrapper style1 special">
+			<a id="Data"></a>
+			<div class="inner">
+				<h2>MOODS Participation</h2>
+				<div class="stats">
+					<article>
+						<h3><span style="display: block; font-size: 2em; font-weight: bold;">122</span>Participants</h3>
+					</article>
+					<article>
+						<h3><span style="display: block; font-size: 2em; font-weight: bold;">6911</span>Participant-Days</h3>
+					</article>
+					<article>
+						<h3><span style="display: block; font-size: 2em; font-weight: bold;">11,222</span>Total Stressors</h3>
+					</article>
+					
+				</div>
+			</div>
+		</section>
 		
+		<section id="wordcloud" class="wrapper style1 special">
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Word Clouds of Stressors and Locations <br>
+					Reported in the MOODS Study
+				</h2>
+		
+				<!-- Flex container with larger gap -->
+				<div style="display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; padding: 20px;">
+					<!-- First Image -->
+					<div style="flex: 1; min-width: 400px; max-width: 500px;">
+						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+							Stressors
+						</h3>
+						<img id="stressors" src="results/all_stressors_wordcloud.jpg" width="500" height="400" alt="Stressors Word Cloud" />
+					</div>
+		
+					<!-- Second Image -->
+					<div style="flex: 1; min-width: 400px; max-width: 500px;">
+						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+							Locations
+						</h3>
+						<img id="locations" src="results/all_locations_wordcloud.jpg" width="500" height="400" alt="Locations Word Cloud" />
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 		<section id="awareness" class="wrapper style1 special">
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
