--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="wrapper style1 special">
+			<!-- <section id="two" class="wrapper style1 special">
 				<a id="Data"></a>
 				<div class="inner">
 					<h2>MOODS Participation</h2>
@@ -149,7 +149,7 @@
 							</article>
 						</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
 			<section id="participate" class="wrapper">
