results page changes

--- a/results.html
+++ b/results.html
@@ -80,7 +80,7 @@
 				<br>
 				<p style="font-size: 22px; font-family: 'Arial', sans-serif; font-weight: bold; text-align: center; color: white;">
 					Sample of all the visualizations designed and deployed in the MOODS Study can be found 
-					<a href="sample_visualizations/Weekly Visualization.html" 
+					<a href="https://odin.md2k.org/moods/ce05c88b-b3c2-387e-afbb-bc977fd886d4/vis//week14/5015c9da-fb15-11ed-b685-d09466493b6d.html" 
 					   target="_blank" 
 					   style="color: #e60000; text-decoration: none; font-weight: bold; font-size: 22px;">
 					   here
@@ -93,10 +93,11 @@
 		<section id="two" class="wrapper style1 special">
 			<a id="Data"></a>
 			<div class="inner">
-				<h2>MOODS Participation</h2>
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					MOODS Participation</h2>
 				<div class="stats">
 					<article>
-						<h3><span style="display: block; font-size: 2em; font-weight: bold;">122</span>Participants</h3>
+						<h3><span style="display: block; font-size: 2em; font-weight: bold;">136</span>Participants</h3>
 					</article>
 					<article>
 						<h3><span style="display: block; font-size: 2em; font-weight: bold;">6911</span>Participant-Days</h3>
