results page changes

--- a/publications.html
+++ b/publications.html
@@ -70,9 +70,15 @@
 								Read Full Publication
 							</a>
 						</div>
-						<div style="text-align: center; margin-top: 20px;">
+						<!-- <div style="text-align: center; margin-top: 20px;">
 							<p style="font-family: 'Arial', sans-serif; color: #333; font-weight: bold;">Video Presentation</p>
 							<iframe width="730" height="473" src="https://www.youtube.com/embed/PGwZs8tZFaY" frameborder="0" allowfullscreen></iframe>
+						</div> -->
+						<div style="text-align: center; margin-top: 20px;">
+							<a href="https://www.youtube.com/watch?v=PGwZs8tZFaY" target="_blank" 
+							   style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">
+							   Video Presentation
+							</a>
 						</div>
 					</div>
 					<!-- Future publications can be added here -->
