results in index

--- a/index.html
+++ b/index.html
@@ -129,6 +129,29 @@
 					</div>
 			</section>
 
+
+			<section id="moods-study-section" class="wrapper style1 special">
+				<div class="inner">
+					<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+						Insights from the MOODS Study
+					</h2>
+			
+					<p style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; color: white; max-width: 800px; margin: auto;">
+						In the MOODS study, participants reported better awareness of their stressors and self-initiated 
+						fourteen kinds of behavioral changes to reduce stress in their daily lives. Repeated self-reports 
+						over 14 weeks showed reductions in both stress intensity (in 26,521 momentary ratings) and 
+						stress frequency (in 1,057 weekly surveys). 
+					</p>
+			
+					<!-- Call-to-action -->
+					<div style="text-align: center; margin-top: 20px;">
+						<a href="publications.html" class="button" style="background-color: white; color: black; font-weight: bold; padding: 10px 20px; border-radius: 5px; text-decoration: none;">
+							Read More in the Publications Tab
+						</a>
+					</div>
+				</div>
+			</section>
+
 		<!-- Two -->
 			<!-- <section id="two" class="wrapper style1 special">
 				<a id="Data"></a>
