--- a/index.html
+++ b/index.html
@@ -130,25 +130,28 @@
 			</section>
 
 
-			<section id="moods-study-section" class="wrapper style1 special">
+			<section id="one" class="wrapper">
+				<a id="MOODS-Results"></a>
 				<div class="inner">
-					<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
-						Insights from the MOODS Study
-					</h2>
+					<h2><strong>MOODS Study</strong> – Key Findings on Stress Awareness and Reduction</h2>
 			
-					<p style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; color: white; max-width: 800px; margin: auto;">
-						In the MOODS study, participants reported better awareness of their stressors and self-initiated 
-						fourteen kinds of behavioral changes to reduce stress in their daily lives. Repeated self-reports 
-						over 14 weeks showed reductions in both stress intensity (in 26,521 momentary ratings) and 
-						stress frequency (in 1,057 weekly surveys). 
-					</p>
-			
-					<!-- Call-to-action -->
-					<div style="text-align: center; margin-top: 20px;">
-						<a href="publications.html" class="button" style="background-color: white; color: black; font-weight: bold; padding: 10px 20px; border-radius: 5px; text-decoration: none;">
-							Read More in the Publications Tab
-						</a>
-					</div>
+					<section>
+						<h2></h2>
+						<div class="features">
+							<article class="icon fa-chart-line">
+								<h3>Improved Stress Awareness</h3>
+								<p>Participants reported better awareness of their stressors and self-initiated fourteen kinds of behavioral changes to reduce stress in their daily lives.</p>
+							</article>
+							<article class="icon fa-clock">
+								<h3>Longitudinal Impact</h3>
+								<p>Over 14 weeks, repeated self-reports showed reductions in both stress intensity (26,521 momentary ratings) and stress frequency (1,057 weekly surveys).</p>
+							</article>
+							<article class="icon fa-book-open">
+								<h3>Learn More</h3>
+								<p>To explore detailed results from the MOODS study, visit the <a href="#publications">Publications</a> tab or read our manuscript.</p>
+							</article>
+						</div>
+					</section>
 				</div>
 			</section>
 
