results in index

--- a/index.html
+++ b/index.html
@@ -133,22 +133,26 @@
 			<section id="one" class="wrapper">
 				<a id="MOODS-Results"></a>
 				<div class="inner">
-					<h2><strong>MOODS Study</strong> – Key Findings on Stress Awareness and Reduction</h2>
+					<h2><strong>MOODS Study</strong> – Key Findings</h2>
 			
 					<section>
 						<h2></h2>
 						<div class="features">
 							<article class="icon fa-chart-line">
-								<h3>Improved Stress Awareness</h3>
-								<p>Participants reported better awareness of their stressors and self-initiated fourteen kinds of behavioral changes to reduce stress in their daily lives.</p>
+								<h3>Engagement</h3>
+								<p>With a 30-day retention rate of 81% and prompt response rate of 75%, 11,222 stressors were recorded in total.</p>
 							</article>
 							<article class="icon fa-clock">
 								<h3>Longitudinal Impact</h3>
 								<p>Over 14 weeks, repeated self-reports showed reductions in both stress intensity (26,521 momentary ratings) and stress frequency (1,057 weekly surveys).</p>
 							</article>
+							<article class="icon fa-chart-line">
+								<h3>Improved Stress Awareness</h3>
+								<p>Participants reported better awareness of their stressors and <b>self-initiated fourteen kinds</b> of behavioral changes to reduce stress in their daily lives.</p>
+							</article>
 							<article class="icon fa-book-open">
 								<h3>Learn More</h3>
-								<p>To explore detailed results from the MOODS study, visit the <a href="#publications">Publications</a> tab or read our manuscript.</p>
+								<p>To explore detailed results from the MOODS study, visit the <a href="#results">Results</a> or <a href="#publications">Publications</a>.</p>
 							</article>
 						</div>
 					</section>
