results in index

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<section id="one" class="wrapper">
 				<a id="MOODS-Results"></a>
 				<div class="inner">
-					<h2><strong>MOODS Study</strong> – Key Findings</h2>
+					<h2><strong>Key Findings and Insights from MOODS Study</strong> </h2>
 			
 					<section>
 						<h2></h2>
