--- a/results.html
+++ b/results.html
@@ -56,7 +56,7 @@
 		<section id="framework-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
-					Illustration of key steps in the MOODS study
+					MOODS Study Design Overview
 				</h2>
 		
 				<!-- Centering the image -->
@@ -70,7 +70,7 @@
 		<section id="sankey-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
-					Design Rationales for Weekly Visualizations
+					Theoretical Framework for Weekly Visualizations
 				</h2>
 				
 				<!-- Centering the image -->
