results in index

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<p>Over 14 weeks, repeated self-reports showed reductions in both stress intensity (26,521 momentary ratings) and stress frequency (1,057 weekly surveys).</p>
 							</article>
 							<article class="icon fa-chart-line">
-								<h3>Improved Stress Awareness</h3>
+								<h3>Improved Stress and Stressor Awareness</h3>
 								<p>Participants reported better awareness of their stressors and <b>self-initiated fourteen kinds</b> of behavioral changes to reduce stress in their daily lives.</p>
 							</article>
 							<article class="icon fa-book-open">
