--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							</article>
 							<article class="icon fa-book-open">
 								<h3>Learn More</h3>
-								<p>To explore detailed results from the MOODS study, visit the <a href="#results">Results</a> or <a href="#publications">Publications</a>.</p>
+								<p>To explore detailed results from the MOODS study, visit the <a href="results.html">Results</a> or <a href="publications.html">Publications</a>.</p>
 							</article>
 						</div>
 					</section>
